--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -242,44 +242,103 @@ input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
 
-
 .hover1 {
+    background-color: transparent;
+    border: 1px solid #00F0FF;
+    border-radius: 50px;
+    color: #ffffff;
+    padding: 15px 45px;
+    position: relative;
     display: inline-block;
     overflow: hidden;
-    border-radius: 50px;
-    border: 2px solid #00F0FF;
-    color: #fff;
     z-index: 1;
-    padding: 15px 45px;
-    transition: all 0.3s ease;
     text-align: center;
-    background: none;
-    width: max-content;
-    transition: all 0.3s ease;
+    cursor: pointer;
+    transition: all 0.6s ease;
+}
+
+.hover1::before,
+.hover1::after {
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background-color: #00F0FF;
+    border-radius: 50%;
+    transition: all 0.6s ease;
+    z-index: -1;
+}
+
+.hover1::before {
+    --n: 1;
+    left: calc((var(--n) - 1) * 50%);
+    transform: translateY(150%);
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+}
+
+.hover1::after {
+    --n: 2;
+    left: calc((var(--n) - 1) * 50%);
+    transform: translateY(150%);
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+}
+
+.hover1:hover::before,
+.hover1:hover::after {
+    transform: translateY(0) scale(2);
 }
 
 .hover1:hover {
-    background: #00F0FF;
     color: #04070E;
 }
 
 .hover2 {
+    background-color: transparent;
+    border: 1px solid #00F0FF;
+    border-radius: 50px;
+    color: #04070E;
+    padding: 15px 45px;
+    position: relative;
     display: inline-block;
     overflow: hidden;
-    border-radius: 50px;
-    border: 2px solid #00F0FF;
-    color: #04070E;
     z-index: 1;
-    padding: 15px 45px;
-    transition: all 0.3s ease;
     text-align: center;
-    background: #00F0FF;
-    width: max-content;
-    transition: all 0.3s ease;
+    cursor: pointer;
+    transition: all 0.6s ease;
+}
+
+.hover2::before,
+.hover2::after {
+    content: '';
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    background-color: #00F0FF;
+    border-radius: 50%;
+    transition: all 0.6s ease;
+    z-index: -1;
+}
+
+.hover2::before {
+    --n: 1;
+    left: calc((var(--n) - 1) * 50%);
+    transform: translateY(0) scale(2);
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+}
+
+.hover2::after {
+    --n: 2;
+    left: calc((var(--n) - 1) * 50%);
+    transform: translateY(0) scale(2);
+    transition-delay: calc((var(--n) - 1) * 0.1s);
+}
+
+.hover2:hover::before,
+.hover2:hover::after {
+    transform: translateY(150%);
 }
 
 .hover2:hover {
-    background: transparent;
     color: #ffffff;
 }
 
